Adding solution for Two Strings

--- a/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
+++ b/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ArraysTests.cs" />
+    <Compile Include="HashesProblemsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
