--- a/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
+++ b/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ArraysTests.cs" />
     <Compile Include="HashesProblemsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringManipulationProblemsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
