--- a/HankerRankSolutions/HankerRankSolutions.csproj
+++ b/HankerRankSolutions/HankerRankSolutions.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms.cs" />
     <Compile Include="Strings.cs" />
     <Compile Include="Hashes.cs" />
     <Compile Include="Arrays.cs" />
