--- a/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
+++ b/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
@@ -56,6 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="AlgorithmProblemsTests.cs" />
     <Compile Include="ArraysTests.cs" />
     <Compile Include="HashesProblemsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
