Adding solution for Mark And Toys

--- a/HankerRankSolutions/HankerRankSolutions.csproj
+++ b/HankerRankSolutions/HankerRankSolutions.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms.cs" />
+    <Compile Include="Sorting.cs" />
     <Compile Include="Strings.cs" />
     <Compile Include="Hashes.cs" />
     <Compile Include="Arrays.cs" />
