--- a/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
+++ b/HankerRankSolutionsTests/HankerRankSolutionsTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ArraysTests.cs" />
     <Compile Include="HashesProblemsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortingProblemsTests.cs" />
     <Compile Include="StringManipulationProblemsTests.cs" />
   </ItemGroup>
   <ItemGroup>
